--- a/PiPool/templates/login.html
+++ b/PiPool/templates/login.html
@@ -1,53 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% extends 'master.html' %}
 
-</head>
-<body>
-<div id="container" class="cls-container">
 
-    <div class="cls-header cls-header-lg">
-        <div class="cls-brand">
-            <span class="brand-title">PiPool <span class="text-thin">Login</span></span>
-        </div>
-    </div>
+{% block content %}
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
 
-    <div class="cls-content">
-        <div class="cls-content-sm panel">
-            <div class="panel-body">
-                <p class="pad-btm">Sign In to your account<br/></p>
-                <form action="/login/process" method="post">
-                    <div class="form-group">
-                        <div class="input-group">
-                            <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                            <input type="text" class="form-control" id="email" placeholder="Email" name="email" required autofocus />
-                        </div>
+    {% if next %}
+
+        {% if user.is_authenticated %}
+            <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
+        {% else %}
+            <p>Please login to see this page.</p>
+        {% endif %}
+
+    {% endif %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Please Sign In</h3>
                     </div>
-                    <div class="form-group">
-                        <div class="input-group">
-                            <div class="input-group-addon"><i class="fa fa-asterisk"></i></div>
-                            <input type="password" class="form-control" placeholder="Password" name="password" required />
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-8 text-left checkbox">
-                            <label class="form-checkbox form-icon">
-                                <input type="checkbox" checked value="1"> Remember me
-                            </label>
-                        </div>
-                        <div class="col-xs-4">
-                            <div class="form-group text-right">
-                                <button class="btn btn-success text-uppercase" type="submit">Sign In</button>
-                            </div>
-                        </div>
+                    <div class="panel-body">
+                        <form method="post" action="{% url 'login' %}">
+                            {% csrf_token %}
 
+                            <p class="bs-component">
+                                <table>
+                                    <tr>
+                                        <td>{{ form.username.label_tag }}</td>
+                                        <td>{{ form.username }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>{{ form.password.label_tag }}</td>
+                                        <td>{{ form.password }}</td>
+                                    </tr>
+                                </table>
+                            </p>
+
+                            <p class="bs-component">
+                                <center>
+                                    <input class="btn btn-success btn-sm" type="submit" value="login" />
+                                </center>
+                            </p>
+
+                            <input type="hidden" name="next" value="{{ next }}" />
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
 
-</div>
+{% endblock %}
 
-</body>
-</html>
+{% block javascript %}
+
+    <script>
+
+    {% if not user.is_authenticated %}
+        $("ul.nav.navbar-nav.navbar-right").css("display","none");
+    {% endif %}
+
+    </script>
+
+{% endblock %}
