migration working, controler and model updates

--- a/PiPool/templates/dashboard.html
+++ b/PiPool/templates/dashboard.html
@@ -5,14 +5,87 @@
 <div class="container">
     <div class="row">
 
-        <div class="jumbotron">
-            <h1>You made it to the dashboard!!</h1>
+        {% for pin in pins %}
+            <div class="col-md-6 col-lg-3">
+                <div class="panel text-center">
+                    <div class="panel-body">
+                        <h4 class="mar-no">{{ pin.name }}</h4>
+                    </div>
 
+                    <div class="pad-all">
+                        <p class="text-muted">{{ pin.description }}</p>
+                        <div class="pad-btm">
+                            {% if pin.get_state %}
+                                <button class="btn btn-success js-turn-off" data-id="{{ pin.id }}">Turn off</button>
+                            {% else %}
+                                <button class="btn btn-info js-turn-on" data-id="{{ pin.id }}">Turn on</button>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
 
-            <h3>Currently: <i class="fa fa-thermometer-three-quarters"></i> {{ temperature }} &#x2103;</h3>
+        {% for thermometer in thermometers  %}
+            <div class="col-md-6 col-lg-3">
+                <div class="panel text-center">
+                    <div class="panel-body">
+                        <h4 class="mar-no">{{ thermometer.name }}</h4>
+                        <p>{{ thermometer.description }}</p>
+                    </div>
 
-        </div>
+                    <div class="pad-all">
+                        <h4 class="text">
+                            <i class="fa fa-thermometer-three-quarters"></i> {{ thermometer.get_temp }}&#x2103;
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+
+        {% if pins.count == 0 %}
+            <div class="col-md-6 col-lg-3">
+                <div class="panel text-center">
+                    <h2>Looks like you have no pins set up. Set them up <a href="/setup">here.</a></h2>
+                </div>
+            </div>
+        {% endif %}
     </div>
 </div>
 
+{% endblock %}
+
+{% block javascript %}
+<script>
+
+    $('.js-turn-on').click(function(){
+        var id = $(this).data('id');
+        togglePinState(id, true, this);
+    });
+
+    $('.js-turn-off').click(function(){
+        var id = $(this).data('id');
+        togglePinState(id, false, this);
+    });
+
+    function togglePinState(pin, state, button){
+        var url = '{% url 'pin_set' %}';
+
+        // $(button)
+
+        $.ajax({
+            type: "POST",
+            url: url,
+            dataType: "json",
+            data: { pin : pin, state : state, csrfmiddlewaretoken : '{{ csrf_token }}' }
+        }).done(function(data) {
+            console.log(data);
+
+            if(data.success){
+                
+            }
+        });
+    }
+
+</script>
 {% endblock %}
