--- a/PiPool/templates/master.html
+++ b/PiPool/templates/master.html
@@ -8,6 +8,15 @@
 
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
         <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" />
+        <style>
+            body{
+                background-color: #e7ebee;
+            }
+
+            .pad-all{
+                padding: 15px;
+            }
+        </style>
     </head>
 
     <body>
