--- a/PiPool/templates/master.html
+++ b/PiPool/templates/master.html
@@ -29,7 +29,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">PiPool</a>
+                    <a class="navbar-brand" href="/">Home</a>
+                    <a class="navbar-brand" href="{% url 'pins' %}">Pins</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
