--- a/PiPool/templates/dashboard.html
+++ b/PiPool/templates/dashboard.html
@@ -114,7 +114,7 @@
             if(data.success){
                 buttonText = "Turn " + (data.state ? "On" : "Off");
 
-                $(button).data('state', data.state);
+                $(button).data('state', data.state ? 1 : 0);
             } else {
                 alert("Oh No!! Something when wrong");
             }
