i need that bracket!

--- a/PiPool/templates/dashboard.html
+++ b/PiPool/templates/dashboard.html
@@ -15,7 +15,7 @@
                     <div class="pad-all">
                         <p class="text-muted">{{ pin.description }}</p>
                         <div class="pad-btm">
-                            <button class="btn btn-success js-toggle" data-id="{{ pin.id }}" data-state="{{ pin.get_state_opposite }">Turn 
+                            <button class="btn btn-success js-toggle" data-id="{{ pin.id }}" data-state="{{ pin.get_state_opposite }}">Turn 
                             {% if pin.get_state %}
                                 off
                             {% else %}
