--- a/PiPool/templates/master.html
+++ b/PiPool/templates/master.html
@@ -36,6 +36,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
+                            <a href="{% url 'update' %}">Update</a>
                             <a href="/logout">Logout</a>
                         </li>
                     </ul>
