--- a/PiPool/templates/pins/pins.html
+++ b/PiPool/templates/pins/pins.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
 
-        <a href="{% url 'pin_create' %}" class="btn btn-success">Create</a>
+        <a href="{% url 'pin_create_edit' %}" class="btn btn-success">Create</a>
 
         <table class="table table-striped">
             <thead>
