--- a/PiPool/templates/master.html
+++ b/PiPool/templates/master.html
@@ -31,7 +31,7 @@
                     </button>
                     <a class="navbar-brand" href="/">Home</a>
                     <a class="navbar-brand" href="{% url 'pins' %}">Pins</a>
-                    <a href="{% url 'update' %}">Update</a>
+                    <a class="navbar-brand" href="{% url 'update' %}">Update</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
