also hide id label, check if id is set

--- a/PiPool/templates/pins/pin-create-edit.html
+++ b/PiPool/templates/pins/pin-create-edit.html
@@ -12,11 +12,15 @@
 
                     {% for field in form %}
 
-                        <div class="form-group">
-                            {{ field.errors }}
-                            {{ field.label_tag }}
-                            {{ field }}
-                        </div>
+                        {% if field.label_tag !== 'Id' %}
+
+                            <div class="form-group">
+                                {{ field.errors }}
+                                {{ field.label_tag }}
+                                {{ field }}
+                            </div>
+
+                        {% endif %}
 
                     {% endfor %}
 
