--- a/PiPool/templates/pins/pin-create-edit.html
+++ b/PiPool/templates/pins/pin-create-edit.html
@@ -12,7 +12,7 @@
 
                     {% for field in form %}
 
-                        {% if field.label_tag !== 'Id' %}
+                        {% if field.label_tag != 'Id' %}
 
                             <div class="form-group">
                                 {{ field.errors }}
