--- a/PiPool/templates/git/update.html
+++ b/PiPool/templates/git/update.html
@@ -48,7 +48,7 @@
             console.log(data);
 
             if(data.success){
-                window.loaction.reload();
+                window.location.reload();
             } else {
                 alert("Oh No!! Something when wrong");
             }
