disable git pull btn

--- a/PiPool/templates/git/update.html
+++ b/PiPool/templates/git/update.html
@@ -39,6 +39,8 @@
 
     $('.js-update').click(function(){
 
+        $(this).attr('disabled', true);
+
         $.ajax({
             type: "POST",
             url: {% url 'update' %},
