fine have slashes

--- a/PiPool/templates/pins/pins.html
+++ b/PiPool/templates/pins/pins.html
@@ -46,7 +46,7 @@
 
         var row = $(this).parents('.js-tr');
 
-        var url = '/pins/delete/' + id;
+        var url = '/pins/delete/' + id + '/';
 
         $.ajax({
             type: "POST",
