i dont think it'll like that

--- a/PiPool/templates/pins/pin-create-edit.html
+++ b/PiPool/templates/pins/pin-create-edit.html
@@ -10,11 +10,7 @@
 
                 <div class="panel panel-default">
 
-                    {% for hidden in form.hidden_fields %}
-                        {{ hidden }}
-                    {% endfor %}
-
-                    {% for field in form.visible_fields %}
+                    {% for field in form %}
 
                         <div class="form-group">
                             {{ field.errors }}
