--- a/PiControl/templates/login.html
+++ b/PiControl/templates/login.html
@@ -14,30 +14,34 @@
                         <h3 class="panel-title">Please Sign In</h3>
                     </div>
                     <div class="panel-body">
-                        <form method="post" action="{% url 'login' %}">
-                            {% csrf_token %}
 
-                            <p class="bs-component">
-                                <table>
-                                    <tr>
-                                        <td>{{ form.username.label_tag }}</td>
-                                        <td>{{ form.username }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>{{ form.password.label_tag }}</td>
-                                        <td>{{ form.password }}</td>
-                                    </tr>
-                                </table>
-                            </p>
+                        <div class="owl">
+                            <div class="hand"></div>
+                            <div class="hand hand-r"></div>
+                            <div class="arms">
+                                <div class="arm"></div>
+                                <div class="arm arm-r"></div>
+                            </div>
+                        </div>
 
-                            <p class="bs-component">
-                                <center>
-                                    <input class="btn btn-success btn-sm" type="submit" value="login" />
-                                </center>
-                            </p>
+                        <div class="form">
+                            <form method="post" action="{% url 'login' %}">
+                                {% csrf_token %}
+                                <div class="control">
+                                    <label for="username" class="fa fa-envelope"></label>
+                                    {{ form.username }}
+                                </div>
+                                <div class="control">
+                                    <label for="password" class="fa fa-asterisk"></label>
+                                    {{ form.password }}
+                                </div>
 
-                            <input type="hidden" name="next" value="{{ next }}" />
-                        </form>
+                                <input class="btn btn-success btn-sm" type="submit" value="login" />
+                                <input type="hidden" name="next" value="{{ next }}" />
+                            </form>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
