--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -1,57 +1,54 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PiPool</title>
+<head>
+	<title>PiPool</title>
+</head>
+<body>
+	{% load staticfiles %}
+	
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-        <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" />
-        <style>
-            body{
-                background-color: #e7ebee;
-            }
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button> 
+				<a class="navbar-brand" href="/">Home</a> 
+				<a class="navbar-brand" href="{% url 'pins' %}">Pins</a>
+				<a class="navbar-brand" href="{% url 'update' %}">Update</a>
+			</div>
 
-            .pad-all{
-                padding: 15px;
-            }
-        </style>
-    </head>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown">
+						<a href="/logout">Logout</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-    <body>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">Home</a>
-                    <a class="navbar-brand" href="{% url 'pins' %}">Pins</a>
-                    <a class="navbar-brand" href="{% url 'update' %}">Update</a>
-                </div>
+	{% block content %} 
+	{% endblock %} 
 
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown">
-                            <a href="/logout">Logout</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-        {% block content %}
-        {% endblock %}
+	<script>
+		$('input[type="password"]').on('focus', () => {
+		  $('*').addClass('password');
+		}).on('focusout', () => {
+		  $('*').removeClass('password');
+		});
+	</script>
 
-
-        <script src = "{% static 'js/jquery.min.js' %}"></script>
-        <script src = "{% static 'js/bootstrap.min.js' %}"></script>
-        {% block javascript %}
-        {% endblock %}
-
-    </body>
+	{% block javascript %} 
+	{% endblock %}
+</body>
 </html>
