--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,12 @@
-@import 'roboto.css'
-@import 'font-awesome.min.css'
-@import 'bootstrap.min.css'
+@import 'roboto.css';
+@import 'font-awesome.min.css';
+@import 'bootstrap.min.css';
 
-body
+body{
   background-color #1a8fb4
   font-family 'Roboto', sans-serif
   font-size 14px
+}
 
 .pad-all{
    padding: 15px;
@@ -48,7 +49,7 @@ body
     .arm
       width 40px
       height 65px
-      background-image url('https://dash.readme.io/img/owl-login-arm.png')
+      background-image url('../img/owl-login-arm.png')
       position absolute
       left 20px
       top 40px
