--- a/PiControl/templates/login.html
+++ b/PiControl/templates/login.html
@@ -1,63 +1,79 @@
-{% extends 'master.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Login - PiControl</title>
+</head>
+<body>
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<style>
+		body{
+			background-color: #1a8fb4;
+		}
+
+		#display-error{
+			width: 400px;
+			border: 1px solid #D8D8D8;
+			padding: 5px;
+			border-radius: 5px;
+			font-family: Arial;
+			font-size: 11px;
+			text-transform: uppercase;
+			background-color: rgb(255, 249, 242);
+			color: rgb(211, 0, 0);
+			text-align: center;
+		}
+	</style>
 
 
-{% block content %}
-    {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
+	{% if form.errors %}
+		<div id="display-error">
+			Your username and password didn't match.
+		</div>
+	{% endif %}
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <div class="login-panel panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
-                    </div>
-                    <div class="panel-body">
-
-                        <div class="owl">
-                            <div class="hand"></div>
-                            <div class="hand hand-r"></div>
-                            <div class="arms">
-                                <div class="arm"></div>
-                                <div class="arm arm-r"></div>
-                            </div>
-                        </div>
-
-                        <div class="form">
-                            <form method="post" action="{% url 'login' %}">
-                                {% csrf_token %}
-                                <div class="control">
-                                    <label for="username" class="fa fa-envelope"></label>
-                                    {{ form.username }}
-                                </div>
-                                <div class="control">
-                                    <label for="password" class="fa fa-asterisk"></label>
-                                    {{ form.password }}
-                                </div>
-
-                                <input class="btn btn-success btn-sm" type="submit" value="login" />
-                                <input type="hidden" name="next" value="{{ next }}" />
-                            </form>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
+    <div class="owl">
+        <div class="hand"></div>
+        <div class="hand hand-r"></div>
+        <div class="arms">
+            <div class="arm"></div>
+            <div class="arm arm-r"></div>
         </div>
     </div>
 
-{% endblock %}
+    <div class="owl-form">
+        <form method="post" action="{% url 'login' %}">
+            <div class="control">
+                <label for="email" class="fa fa-envelope"></label>
+                {{ form.username }}
+            </div>
+            <div class="control">
+                <label for="password" class="fa fa-user"></label>
+                {{ form.password }}
+            </div>
+			<div class="control">
+            	<input class="btn btn-success btn-block" type="submit" value="login" />
+        	</div>
 
-{% block javascript %}
+            <input type="hidden" name="next" value="{{ next }}" />
+        </form>
+    </div>
 
-    <script>
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-    {% if not user.is_authenticated %}
-        $("ul.nav.navbar-nav.navbar-right").css("display","none");
-    {% endif %}
+	<script>
+	    $(document).on('load', function(){
+			$('input[type="text"]').focus();
+		});
 
-    </script>
+		$('input[type="password"]').on('focus', function () {
+		  $('*').addClass('password');
+		}).on('focusout', function () {
+		  $('*').removeClass('password');
+		});
+	</script>
 
-{% endblock %}
+</body>
+</html>
