--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -8,7 +8,7 @@
 	
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<link href="{% static 'css/style.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
@@ -39,14 +39,6 @@
 
 	<script src="{% static 'js/jquery.min.js' %}"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-
-	<script>
-		$('input[type="password"]').on('focus', () => {
-		  $('*').addClass('password');
-		}).on('focusout', () => {
-		  $('*').removeClass('password');
-		});
-	</script>
 
 	{% block javascript %} 
 	{% endblock %}
