--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,80 +12,95 @@ body{
    padding: 15px;
 }
 
-.owl
-  margin auto
-  width 211px
-  height 108px
-  background-image url('../img/owl-login.png')
-  position relative
-  
-  .hand
-    width 34px
-    height 34px
-    border-radius 40px
-    background-color #472d20
-    transform scaleY(0.6)
-    position absolute
-    left 14px
-    bottom -8px
-    transition 0.3s ease-out
-    
-    &.password
-      transform translateX(42px) translateY(-15px) scale(0.7);
-    
-    &.hand-r
-      left 170px
-      
-      &.password
-        transform translateX(-42px) translateY(-15px) scale(0.7);
-    
-  .arms
-    position absolute
-    top 58px
-    height 41px
-    width 100%
-    overflow hidden
-  
-    .arm
-      width 40px
-      height 65px
-      background-image url('../img/owl-login-arm.png')
-      position absolute
-      left 20px
-      top 40px
-      transition 0.3s ease-out
-      
-      &.password
-        transform translateX(40px) translateY(-40px)
+.owl {
+  margin: auto;
+  width: 211px;
+  height: 108px;
+  background-image: url("../img/owl-login.png");
+  position: relative;
+  margin-top: 10%;
+}
 
+.owl .hand {
+  width: 34px;
+  height: 34px;
+  border-radius: 40px;
+  background-color: #472d20;
+  transform: scaleY(0.6);
+  position: absolute;
+  left: 14px;
+  bottom: -8px;
+  transition: 0.3s ease-out;
+}
 
-      &.arm-r
-        left 158px
-        transform scaleX(-1)
-        
-        &.password 
-          transform translateX(-40px) translateY(-40px) scaleX(-1)
-          
-.form
-  margin auto
-  margin-top -9px
-  padding 30px
-  background-color white
-  width 175px
-    
-  .control
-    margin-bottom 10px
-    position relative
+.owl .hand.password {
+  transform: translateX(42px) translateY(-15px) scale(0.7);
+}
 
-    label
-      position absolute
-      font-size 16px
-      top 11px
-      left 9px
-      color rgba(0,0,0,0.3)
-    
-    input
-      padding 9px 6px 9px 30px
-      border-radius 4px
-      border 1px solid #cccccc
-      font-size 14px
+.owl .hand.hand-r {
+  left: 170px;
+}
+
+.owl .hand.hand-r.password {
+  transform: translateX(-42px) translateY(-15px) scale(0.7);
+}
+
+.owl .arms {
+  position: absolute;
+  top: 58px;
+  height: 41px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.owl .arms .arm {
+  width: 40px;
+  height: 65px;
+  background-image: url("../img/owl-login-arm.png");
+  position: absolute;
+  left: 20px;
+  top: 40px;
+  transition: 0.3s ease-out;
+}
+
+.owl .arms .arm.password {
+  transform: translateX(40px) translateY(-40px);
+}
+
+.owl .arms .arm.arm-r {
+  left: 158px;
+  transform: scaleX(-1);
+}
+
+.owl .arms .arm.arm-r.password {
+  transform: translateX(-40px) translateY(-40px) scaleX(-1);
+}
+
+.owl-form {
+  margin: auto;
+  margin-top: -9px;
+  padding: 30px;
+  background-color: #fff;
+  width: 100%;
+}
+
+.owl-form .control {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.owl-form .control label {
+  position: absolute;
+  font-size: 16px;
+  top: 11px;
+  left: 9px;
+  color: rgba(0,0,0,0.3);
+}
+
+.owl-form .control input {
+  padding: 9px 6px 9px 30px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  width: 100%;
+}
