need token for middleware to be happy

--- a/PiControl/templates/login.html
+++ b/PiControl/templates/login.html
@@ -57,6 +57,7 @@
             	<input class="btn btn-success btn-block" type="submit" value="login" />
         	</div>
 
+            {% csrf_token %}
             <input type="hidden" name="next" value="{{ next }}" />
         </form>
     </div>
