update form size and icons on login page

--- a/PiControl/templates/login.html
+++ b/PiControl/templates/login.html
@@ -46,11 +46,11 @@
     <div class="owl-form">
         <form method="post" action="{% url 'login' %}">
             <div class="control">
-                <label for="email" class="fa fa-envelope"></label>
+                <label for="email" class="fa fa-user"></label>
                 {{ form.username }}
             </div>
             <div class="control">
-                <label for="password" class="fa fa-user"></label>
+                <label for="password" class="fa fa-asterisk"></label>
                 {{ form.password }}
             </div>
 			<div class="control">
