--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,11 @@
 @import 'roboto.css';
-@import 'font-awesome.min.css';
 @import 'bootstrap.min.css';
+@import 'font-awesome.min.css';
 
 body{
-  background-color #1a8fb4
-  font-family 'Roboto', sans-serif
-  font-size 14px
+  background-color: #ecf0f1;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
 }
 
 .pad-all{
