--- a/PiControl/templates/pins/pins.html
+++ b/PiControl/templates/pins/pins.html
@@ -23,7 +23,7 @@
                         <td>{{ pin.name }}</td>
                         <td>{{ pin.description }}</td>
                         <td>{{ pin.pin_number }}</td>
-                        <td>{{ pin.is_thermometer }}</td>
+                        <td>{{ pin.is_thermometer|yesno:"Yeah,No,Maybe" }}</td>
                         <td><a class="btn btn-info" href="{% url 'pin_edit' pin.id %}">Edit</a></td>
                         <td><a data-id="{{ pin.id }}" class="js-delete btn btn-warning">Delete</a></td>
                     </tr>
