--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -15,13 +15,8 @@
                     <div class="pad-all">
                         <p class="text-muted">{{ pin.description }}</p>
                         <div class="pad-btm">
-                            <button class="btn btn-success js-toggle" data-id="{{ pin.id }}" data-state="{{ pin.get_state_opposite }}">Turn 
-                            {% if pin.get_state %}
-                                off
-                            {% else %}
-                                on
-                            {% endif %}
-                            </button>
+                            <button class="btn btn-success js-toggle" data-id="{{ pin.id }}"
+                                    data-state="{{ pin.get_state_opposite }}">Turn {{ pin.get_state|yesno:"off,no,off" }}</button>
                         </div>
                     </div>
                 </div>
@@ -48,7 +43,7 @@
         {% if pins.count == 0 %}
             <div class="col-md-6 col-lg-3">
                 <div class="panel text-center">
-                    <h2>Looks like you have no pins set up. Set them up <a href="{% url 'pins' %}">here.</a></h2>
+                    <h2>Looks like you have no pins set up. Create a new one <a href="{% url 'pin_create' %}">here.</a></h2>
                 </div>
             </div>
         {% endif %}
