add command model and ui

--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -10,6 +10,9 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 
+	{% block head %}
+	{% endblock %}
+
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
