--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -24,6 +24,7 @@
 				</button> 
 				<a class="navbar-brand" href="/">Home</a> 
 				<a class="navbar-brand" href="{% url 'pins' %}">Pins</a>
+				<a class="navbar-brand" href="{% url 'maintain' %}">Maintain</a>
 				<a class="navbar-brand" href="{% url 'update' %}">Update</a>
 			</div>
 
