--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -109,9 +109,9 @@
             if(data.success){
                 console.log(data.state);
 
-                buttonText = "Turn " + (data.state ? "off" : "on");
+                buttonText = "Turn " + (data.state ? "on" : "off");
 
-                $(button).data('state', data.state ? 0 : 1);
+                $(button).data('state', data.state ? 1 : 0);
             } else {
                 alert("Oh No!! Something when wrong");
             }
