--- a/PiControl/templates/maintain/index.html
+++ b/PiControl/templates/maintain/index.html
@@ -47,9 +47,9 @@
                     <div>
                         <h3>Manual Control</h3>
                         {% if temp_control.manuel %}
-                            <button class="btn btn-block btn-success js-manual" data-state="0">Off</button>
+                            <button class="btn btn-block btn-danger js-manual" data-state="0">Off</button>
                         {% else %}
-                            <button class="btn btn-block danger js-manual" data-state="1">On</button>
+                            <button class="btn btn-block btn-success js-manual" data-state="1">On</button>
                         {% endif %}
                     </div>
 
